fix: pomodoro play controls not being visible #264

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -85,6 +85,17 @@ $bar-height-small: 40px;
 $mat-mini-fab-size: 48px;
 $mac-title-bar-padding: 20px;
 
+// INDEXES
+// -------
+$z-task-side-bar: 44;
+$z-main-header-wrapper: 50;
+$z-side-nav: 60;
+$z-main-header: 10;
+$z-bookmarks: 9;
+$z-backdrop: 222;
+$z-add-task-bar: 10000;
+
+
 // COMPONENTS
 // ----------
 $standard-note-bg-light: #ffffff;
