--- a/src/app/features/tasks/add-task-bar/add-task-bar.component.scss
+++ b/src/app/features/tasks/add-task-bar/add-task-bar.component.scss
@@ -10,7 +10,6 @@
     left: 50%;
     transform: translateX(-50%);
     width: 80%;
-    z-index: 222;
     height: 0;
     top: $s*6;
     overflow: visible;
